--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -144,7 +144,7 @@ jobs:
           echo "Regular packages publishing:"
           echo "  app_name: nrjmx"
           echo "  schema: nrjmx"
-          echo "  dest_prefix: rahul_testing_nrjmx_part_deux/"
+          echo "  dest_prefix: rahul_testing_nrjmx_part_trois/"
           
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -153,7 +153,7 @@ jobs:
           password: ${{ env.DOCKER_HUB_PASSWORD }}
 
       - name: Publish regular packages to S3
-        uses: newrelic/infrastructure-publish-action@v1
+        uses: newrelic/infrastructure-publish-action@fix_fips_publishing_schema
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.OHAI_AWS_SECRET_ACCESS_KEY_STAGING }}
@@ -174,7 +174,7 @@ jobs:
           aws_region: ${{ env.AWS_REGION }}
           aws_role_session_name: ${{ env.AWS_ROLE_SESSION_NAME }}
           aws_role_arn: ${{ env.AWS_ROLE_ARN }}
-          dest_prefix: "rahul_testing_nrjmx_part_deux/"
+          dest_prefix: "rahul_testing_nrjmx_part_trois/"
           gpg_passphrase: ${{ env.GPG_PASSPHRASE }}
           gpg_private_key_base64: ${{ env.GPG_PRIVATE_KEY_BASE64 }}
 
@@ -200,7 +200,7 @@ jobs:
           password: ${{ env.DOCKER_HUB_PASSWORD }}
 
       - name: Publish FIPS packages to S3
-        uses: newrelic/infrastructure-publish-action@v1
+        uses: newrelic/infrastructure-publish-action@fix_fips_publishing_schema
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.OHAI_AWS_SECRET_ACCESS_KEY_STAGING }}
